kqed_dev4/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_ID_FDNDEV__c</fullName>
        <label>ACCOUNT_ID_FDNDEV</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_ID_LEADS__c</fullName>
        <description>Automatic assign this number when a lead is created, map this field from Leads to Accounts starting with an L-and 9 digits, zero filled, 10 characters all together.</description>
        <inlineHelpText>Automatic assign this number when a lead is created, map this field from Leads to Accounts starting with an L-and 9 digits, zero filled, 10 characters all together.</inlineHelpText>
        <label>ACCOUNT_ID_LEADS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_ID_LOCKBOX__c</fullName>
        <label>ACCOUNT_ID_LOCKBOX</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_ID_PBSD__c</fullName>
        <label>ACCOUNT_ID_PBSD</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AboutUs__c</fullName>
        <description>AboutUs field added for Business Member Partners</description>
        <label>AboutUs</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AccountCategoryValue__c</fullName>
        <label>Account Category Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCategory__c</fullName>
        <description>TA Account Category</description>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountTypeValue__c</fullName>
        <label>Account Type Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <description>TA Account Type</description>
        <label>Account Type</label>
        <picklist>
            <controllingField>AccountCategory__c</controllingField>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association/Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney/Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare/Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial TV Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Local Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate National Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation acting as an Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation- Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation- Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual as a Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual as a Personal Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-size Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_ID_Auction__c</fullName>
        <label>Account ID Auction</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_Cars__c</fullName>
        <label>Account ID Cars</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_Convio__c</fullName>
        <label>Account ID Convio</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Major Gift Acccount Manager  users who deal with an organization</description>
        <inlineHelpText>Major Gift Acct Mgr at WGBH who deal with this organization or have an ongoing relationship</inlineHelpText>
        <label>Major Gift Acct Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquired_Date__c</fullName>
        <label>Acquired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquired_Source__c</fullName>
        <label>Acquired Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <inlineHelpText>By checking this box you activate the Member Discount Offer on the KCRW Web Site</inlineHelpText>
        <label>Active Offer on Website</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_Gift__c</fullName>
        <label>TAG: Additional Gift</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Giving_Level__c</fullName>
        <inlineHelpText>Annual Giving Level on the household.</inlineHelpText>
        <label>Annual Giving Level</label>
        <picklist>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Anonymous_Gift_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous Gift Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AreaCode__c</fullName>
        <description>Area Code</description>
        <label>Area Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <inlineHelpText>Assigned to Name for Volunteer when printing out a list of leads to be worked</inlineHelpText>
        <label>MMI Volunteer Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Barbara Freer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbara Randolph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Hodges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cindy Crosby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Atwereboanda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debra Levin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joyce Schwartz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judy Schults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karin Robinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerridan Ann Murphy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Larry Stuart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michelle Clancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Owen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nilagia McCoy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patricia McMahon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandra Davidow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Wasserman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susan Aron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terri Angeli</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Level_Package__c</fullName>
        <inlineHelpText>Level of Package awarded for Partnership</inlineHelpText>
        <label>Benefit Package Level</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BriefName__c</fullName>
        <description>TA Alias name</description>
        <label>Brief Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Camp_Mail__c</fullName>
        <description>this is from the classification object</description>
        <label>Campaign Mail</label>
        <picklist>
            <picklistValues>
                <fullName>Limited Add Gift Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Add Gift Appeals/Solicitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Raffle Appeals/Solicitations</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CarrierRoute__c</fullName>
        <description>TA Carrier Route</description>
        <label>Carrier Route</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Support_Acct_Type__c</fullName>
        <label>Corp Support Acct Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DP_Annual_Limits__c</fullName>
        <description>Used for Drive Premiums</description>
        <inlineHelpText>Does this Account prefer to only participate in specific Drives?</inlineHelpText>
        <label>DP Annual Limits</label>
        <picklist>
            <picklistValues>
                <fullName>Both Summer &amp; Winter</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Summer Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deduct_Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deduct Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_Frequency__c</fullName>
        <label>Distribution Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tri-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment Schedule</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <label>Distribution</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Ex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>from classifications</description>
        <inlineHelpText>If checked, then do not share the name or address</inlineHelpText>
        <label>Do Not Exchange Name/Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstDonationDate__c</fullName>
        <label>First Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_since_contacted__c</fullName>
        <label>Days since contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Days_since_created__c</fullName>
        <label>Days since created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FonalityUAE__Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formula_MailingAddress__c</fullName>
        <formula>MailingStreet__c &amp; BR() &amp;
MailingCity__c &amp; &quot;, &quot; &amp; MailingState__c &amp; &quot; &quot; &amp; MailingPostalCode__c
&amp; if (LEN(MailingCountry__c)&gt;0,BR()&amp;MailingCountry__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <inlineHelpText>Used for PressList.</inlineHelpText>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reset Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Pledge Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade/Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Giving Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade to Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade to Mid-level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Giveaway_Eligible__c</fullName>
        <formula>IF(Last_Giveaway_Date__c &gt; (TODAY() - 90),
IMAGE(&quot;/img/samples/light_red.gif &quot;, &quot;Not Eligibile&quot;),
IMAGE(&quot;/img/samples/light_green.gif &quot;, &quot;Eligibile&quot;)
)</formula>
        <inlineHelpText>Has this membership won a giveaway in the last 90 days?</inlineHelpText>
        <label>Giveaway Eligible?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giveaway_Member_Count__c</fullName>
        <description>Counts the previous giveaways</description>
        <label>Giveaway Member Count</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_Segment__c</fullName>
        <label>Giving Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Air Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Lowell Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium/Fringe Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation &amp; Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel Mid Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archangel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gr_Gi_Cap_08__c</fullName>
        <description>This is from the classifications object</description>
        <label>GrenzGlier Gift Capacity 2008</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gr_Gi_Cap_09__c</fullName>
        <description>This is from the classifications object</description>
        <label>GrenzGlier Gift Capacity 2009</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Great_Blue_Hill_Society__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Great Blue Hill Society</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gren_Gi_06__c</fullName>
        <description>This is from the classifications object</description>
        <label>GrenzGlier Gift Capacity 2006</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guide__c</fullName>
        <description>from the classifications object</description>
        <label>Guide</label>
        <picklist>
            <picklistValues>
                <fullName>No Printed Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Print Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Class Guide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Household_Email__c</fullName>
        <label>Household Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Household_ID__c</fullName>
        <label>Household ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Phone__c</fullName>
        <label>Household Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>In_Kind__c</fullName>
        <description>this is from the classification object</description>
        <label>In Kind Donor</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweep/Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenge Grant</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>